<resources>
    <string name="app_name">My Application</string>
    <string name="my_main">我的</string>
    <string name="my_firend">好友</string>
    <string name="my_start">START</string>
    <string name="my_firend_state">好友动态</string>
    <string name="my_setting">设置</string>
    <string name="welcome_to_main">和我一起跑</string>
    <string name="login_use">立即登录</string>
    <string name="login_edit_use">编辑个人资料</string>
    <string name="settings">设置</string>
    <string name="about_jing_you_pao">关于静幽跑</string>
    <string name="settings_munch">更多</string>
    <string name="log_in">登陆</string>
    <string name="register_user">注册</string>
    <string name="register_this_user">确认注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="the_third_party_log_in">第三方登陆</string>
    <string name="import_is_mistake">请输入账号和密码</string>
    <string name="version_users">1</string>
    <string name="user_is_nothing">用户不存在或密码错误</string>
    <string name="user_is_exist">用户已存在</string>
    <string name="insert_db_failed">创建用户失败</string>
</resources>
