<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/button_1"
            style="@style/Main_Button"
            android:drawableTop="@drawable/radio_button_selector"
            android:text="@string/my_main"/>
        <RadioButton
            android:id="@+id/button_2"
            style="@style/Main_Button"
            android:drawableTop="@drawable/radio_button_selector"
            android:text="@string/my_firend"/>
        <RadioButton
            android:id="@+id/button_3"
            style="@style/Main_Button"
            android:drawableTop="@drawable/radio_button_selector"
            android:text="@string/my_start"/>
        <RadioButton
            android:id="@+id/button_4"
            style="@style/Main_Button"
            android:drawableTop="@drawable/radio_button_selector"
            android:text="@string/my_firend_state"/>
        <RadioButton
            android:id="@+id/button_5"
            style="@style/Main_Button"
            android:drawableTop="@drawable/radio_button_selector"
            android:text="@string/my_setting"/>
    </RadioGroup>

</LinearLayout>
