<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settings_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--立即登录-->
            <RelativeLayout
                android:id="@+id/settings_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_margin"
                android:layout_marginBottom="@dimen/setting_margin"
                android:background="@drawable/setting_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_use"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/setting_text"/>
            </RelativeLayout>

            <!--编辑资料-->
            <RelativeLayout
                android:id="@+id/settings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_margin"
                android:layout_marginBottom="@dimen/setting_margin"
                android:background="@drawable/setting_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_edit_use"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/setting_margin"
                    android:textSize="@dimen/setting_text"/>
                <ImageView
                    android:id="@+id/settings_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/setting_margin"/>
            </RelativeLayout>

            <!--功能设置-->
            <RelativeLayout
                android:id="@+id/settings_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_margin"
                android:layout_marginBottom="@dimen/setting_margin"
                android:background="@drawable/setting_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/setting_text"/>
            </RelativeLayout>

            <!--关于静幽跑-->
            <RelativeLayout
                android:id="@+id/settings_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_margin"
                android:layout_marginBottom="@dimen/setting_margin"
                android:background="@drawable/setting_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_jing_you_pao"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/setting_text"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>
