<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/user_log_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center" >
            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:paddingRight="60dp"
                android:maxLength="20"
                android:paddingLeft="55dp" >
            </EditText>
            <ImageView
                android:layout_width="22dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/log_in_use"
                android:visibility="visible" />
            <TextView
                android:id="@+id/contry_sn"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="+62"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/bt_username_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/log_in_delete"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >
            <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:paddingRight="60dp"
            android:maxLength="20"
            android:paddingLeft="55dp" >
        </EditText>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginStart="7dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/log_in_password" />
        <Button
            android:id="@+id/bt_pwd_eye"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/log_in_privacy_on"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/bt_pwd_clear"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/log_in_delete"
            android:visibility="invisible"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="33dp"
            />
    </FrameLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@+id/user_log_layout"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:layout_below="@id/log_in_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/forget_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/log_in_button"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#579b8a"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_third_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/the_third_party_log_in"
            android:textColor="#a28026"
            android:gravity="center"
            android:textSize="@dimen/setting_text"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#579b8a"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>

































